name:                clr
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/trbauer/clr#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Bauer
maintainer:          trbauer@gmail.com
copyright:           2016 Tim Bauer
category:            Programming
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CLR
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       parsec,
                       progargs
  default-language:    Haskell2010

executable clr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clr
  default-language:    Haskell2010

test-suite clr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/clr
